--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 	<a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
 
+    <!-- Introduction -->
+
 		<section id="section1" class="cd-product">
 		<div class="cd-product-intro">
 			<h1>3D Animated Mockup</h1>
@@ -110,22 +112,55 @@
 	</section> <!-- .cd-product -->
 		<a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
 
+    <!-- Features -->
 
 	<section id="section2" class="cd-section">
-		<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+		<ul class="cd-container">
+		<li class="cd-service cd-service-divider"></li>
+
+		<li class="cd-service cd-service-1">
+			<h2>Web Design</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur tenetur quod veritatis nulla aspernatur architecto! Fugit, reprehenderit amet deserunt molestiae ut libero facere quasi velit perferendis ullam quis necessitatibus!</p>
+		</li> <!-- cd-service -->
+
+		<li class="cd-service cd-service-2">
+			<h2>Responsive Approach</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur tenetur quod veritatis nulla aspernatur architecto! Fugit, reprehenderit amet deserunt molestiae ut libero facere quasi velit perferendis ullam quis necessitatibus!</p>
+		</li> <!-- cd-service -->
+
+		<li class="cd-service cd-service-3">
+			<h2>E-commerce</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur tenetur quod veritatis nulla aspernatur architecto! Fugit, reprehenderit amet deserunt molestiae ut libero facere quasi velit perferendis ullam quis necessitatibus!</p>
+		</li> <!-- cd-service -->
+
+		<li class="cd-service cd-service-4">
+			<h2>CMS Integration</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur tenetur quod veritatis nulla aspernatur architecto! Fugit, reprehenderit amet deserunt molestiae ut libero facere quasi velit perferendis ullam quis necessitatibus!</p>
+		</li> <!-- cd-service -->
+
+		<li class="cd-service cd-service-divider"></li>
+	</ul> <!-- cd-services -->
 	</section><!-- cd-section -->
+
+    <!-- Slider -->
 
 	<section id="section3" class="cd-section">
 		<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
 	</section><!-- cd-section -->
 
+    <!-- Something Else -->
+
 	<section id="section4" class="cd-section">
 		<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
 	</section><!-- cd-section -->
 
+    <!-- Something Else -->
+
 	<section id="section5" class="cd-section">
 		<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
 	</section><!-- cd-section -->
+
+    <!-- Something Else -->
 
 	<section id="section6" class="cd-section">
 		<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
